modal white space + fixed closed button

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -747,37 +747,69 @@ header {
     transition: 0.2s;
 }
 
+.modal {
+    .close {
+        position: fixed;
+        top: 80px;
+        right: 3px;
+        width: 50px;
+        height: 50px;
+        // border-radius: 40px;
+        opacity: 0.3;
+        z-index: 10;
+    }
 
-.modal-trigger {
-    cursor: pointer;
-}
+    .modal-content {
+        border-radius: 15px;
+    }
 
-.modal-title {
-    font-size: 25px;
-    text-align: center;
-    font-weight: bold;
+    .modal-trigger {
+        cursor: pointer;
+    }
 
-}
+    .modal-title {
+        font-size: 25px;
+        text-align: center;
+        font-weight: bold;
+    }
 
-.modal-head {
-    display: flex;
-    margin-bottom: 5px;
-    text-align: center;
-}
+    .modal-head {
+        display: flex;
+        margin-bottom: 5px;
+        text-align: center;
+    }
 
-.modal-role {
-    margin-bottom: 15px;
-    color: #005792;
-    text-align: center;
-    font-weight: bold;
-}
+    .modal-role {
+        margin-bottom: 15px;
+        color: #005792;
+        text-align: center;
+        font-weight: bold;
+    }
 
-.modal-body .img-fluid {
-    max-width: 300px;
-    height: 380px;
-    object-fit: cover;
-    float: left;
-    border-radius: 6%;
+    .modal-body {
+        margin: 15px 0;
+        max-height: calc(100vh - 200px);
+        overflow-y: auto;
+        overflow-x: hidden;
+        
+        .img-col {
+            display: grid;
+
+            .img-fluid {
+                // max-width: 300px;
+                height: 380px;
+                object-fit: cover;
+                float: left;
+                border-radius: 6%;
+                justify-self: center;
+                align-self: center;
+            }
+        }
+
+        .modal-desc {
+            margin-bottom: 0;
+        }
+    }
 }
 
 .container-fluid {
